# agents

./: .gitignore  README.md
food_mcp/: README.md  main.py  pyproject.toml
food_mcp/food_mcp/: database.py  pantry.py  service.py
plan_exec/: .env.example  config.py  main.py  pyproject.toml
plan_exec/agent/: __init__.py  models.py  nodes.py  prompt_templates.py  schemas.py  tools.py
streamlit_chat/: api_client.py  config.py  main.py  pyproject.toml  sidebar.py
