[project]
name = "plan-exec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=12.9.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "openinference-instrumentation-langchain>=0.1.54",
    "pydantic-settings>=2.11.0",
    "tavily-python>=0.7.12",
]
